--- a/yourcaryourway-chat/src/main/resources/static/index.html
+++ b/yourcaryourway-chat/src/main/resources/static/index.html
@@ -1,24 +1,35 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
-    <title>Interactive Chatroom</title>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, minimum-scale=1.0"
+    />
+    <title>Spring Boot WebSocket Chat Application</title>
     <link rel="stylesheet" href="/css/main.css" />
   </head>
   <body>
     <noscript>
-      <h2>Oops! Votre navigateur ne prend pas en charge JavaScript.</h2>
+      <h2>Sorry! Your browser doesn't support Javascript</h2>
     </noscript>
 
     <div id="username-page">
       <div class="username-page-container">
-        <h1 class="title">Entrez votre pseudonyme pour rejoindre le chat</h1>
+        <h1 class="title">Veuillez entrer votre nom d'utilisateur pour accéder à la salle de chat.</h1>
         <form id="usernameForm" name="usernameForm">
           <div class="form-group">
-            <input type="text" id="name" placeholder="Votre pseudo" autocomplete="off" class="form-control" />
+            <input
+              type="text"
+              id="name"
+              placeholder="Username"
+              autocomplete="off"
+              class="form-control"
+            />
           </div>
           <div class="form-group">
-            <button type="submit" class="accent username-submit">Commencer à discuter</button>
+            <button type="submit" class="accent username-submit">
+              Commencer à discuter
+            </button>
           </div>
         </form>
       </div>
@@ -27,15 +38,21 @@
     <div id="chat-page" class="hidden">
       <div class="chat-container">
         <div class="chat-header">
-          <h2>Démo de Chat WebSocket</h2>
+          <h2>Application de chat WebSocket - Démonstration</h2>
         </div>
-        <div class="connecting">Connexion en cours...</div>
+        <div class="connecting">Connecting...</div>
         <ul id="messageArea"></ul>
         <form id="messageForm" name="messageForm">
           <div class="form-group">
             <div class="input-group clearfix">
-              <input type="text" id="message" placeholder="Écrivez un message..." autocomplete="off" class="form-control" />
-              <button type="submit" class="primary">Envoyer</button>
+              <input
+                type="text"
+                id="message"
+                placeholder="Tapez un message..."
+                autocomplete="off"
+                class="form-control"
+              />
+              <button type="submit" class="primary">Send</button>
             </div>
           </div>
         </form>
